objects/Loja_Participante__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Loja__c</fullName>
        <label>Loja</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Loja</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Lojas Participantes</relationshipLabel>
        <relationshipName>Lojas_Participantes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Promocao__c</fullName>
        <label>Promoção</label>
        <referenceTo>TW1_Parametros_Promocao__c</referenceTo>
        <relationshipLabel>Lojas Participantes</relationshipLabel>
        <relationshipName>Lojas_Participantes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_SGL_Shopping__c</fullName>
        <formula>TW1_Promocao__r.TW1_Shopping__r.TW1_SGL_Empreendimento__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGL Shopping</label>
        <type>Text</type>
    </fields>
    <label>Loja Participante</label>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>Nome de Loja Participante</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lojas Participantes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>